--- a/index.html
+++ b/index.html
@@ -286,26 +286,26 @@
     particlesJS("particles-js", {
       "particles": {
         "number": {
-          "value": 111,
+          "value": 123,
           "density": {
             "enable": true,
-            "value_area": 800
+            "value_area": 1000
           }
         },
         "color": {
-          "value": "#ffffff"
+          "value": '#777777'
         },
         "shape": {
-          "type": "circle",
+          "type": 'circle',
           "stroke": {
             "width": 0,
-            "color": "#000000"
+            "color": '#ff0000'
           },
           "polygon": {
             "nb_sides": 5
           },
           "image": {
-            "src": "img/github.svg",
+            "src": '',
             "width": 100,
             "height": 100
           }
@@ -315,42 +315,43 @@
           "random": false,
           "anim": {
             "enable": false,
-            "speed": 1,
-            "opacity_min": 0.1,
+            "speed": 3,
+            "opacity_min": 0,
             "sync": false
           }
         },
         "size": {
-          "value": 3,
-          "random": true,
+          "value": 1,
+          "random": false,
           "anim": {
             "enable": false,
-            "speed": 40,
-            "size_min": 0.1,
+            "speed": 21,
+            "size_min": 0,
             "sync": false
           }
         },
         "line_linked": {
           "enable": true,
-          "distance": 150,
-          "color": "#ffffff",
-          "opacity": 0.4,
+          "distance": 111,
+          "color": '#555555',
+          "opacity": 1,
           "width": 1
         },
         "move": {
           "enable": true,
-          "speed": 6,
-          "direction": "none",
+          "speed": 3,
+          "direction": 'none',
           "random": false,
           "straight": false,
-          "out_mode": "out",
+          "out_mode": 'out',
           "bounce": false,
           "attract": {
             "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
+            "rotateX": 3000,
+            "rotateY": 3000
           }
-        }
+        },
+        "array": []
       },
       "interactivity": {
         "detect_on": "canvas",
