--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
     <section class="home">
       <div id="particles-js"></div>
       <div class="home-content">
-        <h1 class="hero-title">Naveen Kumar <br /><span>Founder</span></h1>
+        <h1 class="hero-title">Naveen Kumar 
+          <br />
+          <span class="element" data-text1="Founder" data-text2="CO-Founder" data-text3="CEO" data-loop="true" data-backdelay="2100"></span>
+        </h1>
         <p class="top_45">
           We are a design agency in Los Angeles. We are<br />
           designing
           <span class="element" data-text1="web interface." data-text2="branding identity." data-text3="logo."
-            data-loop="true" data-backdelay="1500"></span>
+            data-loop="true" data-backdelay="1100"></span>
         </p>
         <div class="social">
           <a class="text">social links</a>
