--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
     particlesJS("particles-js", {
       "particles": {
         "number": {
-          "value": 123,
+          "value": 111,
           "density": {
             "enable": true,
-            "value_area": 1000
+            "value_area": 555
           }
         },
         "color": {
-          "value": '#777777'
+          "value": '#1f1f1f'
         },
         "shape": {
           "type": 'circle',
@@ -324,7 +324,7 @@
           }
         },
         "size": {
-          "value": 1,
+          "value": 2,
           "random": false,
           "anim": {
             "enable": false,
